<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xcomp.magiclamp.activity.AudioActivity">

    <EditText
        android:id="@+id/editTextDeviceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_id"
        android:inputType="textUri"
        android:maxLines="1"
        android:text="" />



    <Button
        android:id="@+id/buttonOpenStream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/open_stream"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCloseStream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/close_stream"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonScanDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/scan_device"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonToggleOnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/toogle_onoff"
        android:textStyle="bold" />


<!--    <ListView-->
<!--        android:id="@+id/devicelist"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:divider="@null"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentStart="true"-->
<!--        />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scanned Devices"
            />
    </ScrollView>


</LinearLayout>
